Rename `send_message` to `send_now`
